k8slearn/5.Kubernetes 网络/Traefik/Middleware-redirect-https.yaml
# Middleware-redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
